Center map on swap

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 	<script type='text/javascript'>
 		window.addEventListener('DOMContentLoaded', init)
 		L.control.mousePosition().addTo(map);
+		map.setView([-56.25,100],2.5);
 	</script>
 	
 </body>
